Adjust linter errors

--- a/src/components/BooksList.css
+++ b/src/components/BooksList.css
@@ -77,7 +77,8 @@
   width: 100px;
   height: 100px;
   border-radius: 50%;
-  background: radial-gradient(closest-side, white 79%, transparent 80% 100%),
+  background:
+    radial-gradient(closest-side, white 79%, transparent 80% 100%),
     conic-gradient(#0290ff calc(var(--progress-value) * 1%), #e8e8e8 0);
   animation: progress 2s 1 forwards;
   position: relative;
